# RNIC

./: AGENTS.md  CMakeLists.txt  README.md
include/rnic/: protocol.hpp  sha256.hpp  ucx_stream.hpp
scripts/: bench_matrix.sh  build_remote.sh  collect_env.sh  run_receiver.sh  run_sender.sh  run_three_modes.sh  summarize_results.py
src/: protocol.cpp  rnic_recv.cpp  rnic_send.cpp  sha256.cpp  ucx_stream.cpp
